dropdowns no longer have white color since the color will change. Label can now be seen on gpa dialog Also help icon should be hidden on mobile since it couldn't fit on screen Also adding clear icon for search results

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -20,3 +20,8 @@
 .accountOptions {
     margin-top: 10px;
 }
+@media only screen and (max-device-width: 480px) {
+    .helpBox {
+        visibility: hidden;
+    }
+}
